fixed boulder result does not display icons for all boulders, changed sorting method to use closure with sort and left aligned and disabled for beamer federation or city column

--- a/sitemgr/digitalrock/beamer.css
+++ b/sitemgr/digitalrock/beamer.css
@@ -69,3 +69,10 @@ div.bonusTries, div.topTries {
 .compHeader, .resultDate {
 	display: none;
 }
+
+/**
+ * Do not display federation or city column, it is to big
+ */
+td.federation, th.federation, td.city, th.city {
+	display: none;
+}
